--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Your Title Here
+title: Tischlerei Kritzl & Gassner OG
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
-author: Copyright &copy; 2019 - Start Bootstrap
-lang: en_US
+author: Tischlerei Kritzl & Gassner OG
+lang: de_AT
 
 # Build settings
 safe: true # always trues on github-pages, disables _plugins/
